[gd_scene load_steps=16 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/Mechanical.otf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/art/boulder_anims/circle.png" type="Texture" id=3]
[ext_resource path="res://resources/art/boulder_anims/triangle.png" type="Texture" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/sounds/victory.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/sounds/defeat.wav" type="AudioStream" id=7]
[ext_resource path="res://resources/sounds/you_peuped.wav" type="AudioStream" id=8]
[ext_resource path="res://resources/sounds/walk.wav" type="AudioStream" id=9]
[ext_resource path="res://resources/sounds/push.wav" type="AudioStream" id=10]
[ext_resource path="res://resources/sounds/knock.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Menu" type="Panel" parent="."]
margin_left = 350.0
margin_top = 96.0
margin_right = 604.0
margin_bottom = 669.0

[node name="Title" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.4618
margin_top = 24.8046
margin_right = 77.5382
margin_bottom = 90.8046
custom_fonts/font = SubResource( 1 )
text = "soko"

[node name="LevelSelectLabel" type="Label" parent="Menu"]
margin_left = 37.4783
margin_top = 105.973
margin_right = 219.478
margin_bottom = 130.973
custom_fonts/font = SubResource( 2 )
text = "Select level:"

[node name="LevelSelectBox" type="ItemList" parent="Menu"]
margin_left = 38.0
margin_top = 135.0
margin_right = 217.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 3 )

[node name="QuitButt" type="Button" parent="Menu"]
margin_left = 97.9235
margin_top = 523.355
margin_right = 154.924
margin_bottom = 549.355
custom_fonts/font = SubResource( 4 )
text = "quit"

[node name="CBoulder" type="Sprite" parent="Menu"]
position = Vector2( 23.2624, 58.1561 )
texture = ExtResource( 3 )

[node name="TBoulder" type="Sprite" parent="Menu"]
position = Vector2( 223.578, 55.5714 )
texture = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AudioManager" type="Node" parent="."]

[node name="victory_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 6 )

[node name="defeat_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 7 )

[node name="pyrrhic_victory_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 8 )

[node name="walk_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 9 )

[node name="push_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 10 )

[node name="knock_sound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 11 )
